# sparsexx

./: CMakeLists.txt
cmake/: sparsexx-config.cmake.in
cmake/modules/linalg-modules/: FindIntelMKL.cmake
examples/: CMakeLists.txt  asci_proxy.cxx  ci_ham.cxx  test_dist.cxx  test_ls.cxx  test_mkl_feast.cxx  test_norm.cxx  test_perm.cxx  test_spmm.cxx  test_submat.cxx  wfn_files.hpp
examples/attic/: CMakeLists.txt  asci_proxy.cxx  test.cxx  test_dist.cxx  test_evsl.cxx  test_lpcg.cxx  test_ls.cxx  test_mkl_feast.cxx  test_norm.cxx  test_perm.cxx  test_pfeast.cxx  test_pfeast_3p.cxx  test_spmm.cxx  test_submat.cxx
include/sparsexx/: sparsexx_config.hpp.in
include/sparsexx/attic/: dist_sparse_matrix.hpp  pspmbv.hpp
include/sparsexx/io/: read_binary_triplets.hpp  read_mm.hpp  read_rb.hpp  write_binary_triplets.hpp  write_dist_mm.hpp  write_mm.hpp
include/sparsexx/matrix_types/: conversions.hpp  coo_conversions.hpp  coo_matrix.hpp  coo_matrix_ops.hpp  csc_matrix.hpp  csr_matrix.hpp  dense_conversions.hpp  dist_sparse_matrix.hpp  type_fwd.hpp  type_traits.hpp
include/sparsexx/spblas/: pspmbv.hpp  spmbv.hpp  type_traits.hpp
include/sparsexx/spsolve/: bunch_kaufman.hpp  cholesky.hpp
include/sparsexx/util/: graph.hpp  hash.hpp  mpi.hpp  permute.hpp  string.hpp  submatrix.hpp
include/sparsexx/wrappers/: mkl_dss_solver.hpp  mkl_exceptions.hpp  mkl_sparse_matrix.hpp  mkl_sparse_matrix_pimpl.hpp  mkl_type_traits.hpp  mkl_types.hpp
src/: metis_wrapper.cxx
tests/: CMakeLists.txt  test_graph.cxx  test_io.cxx  test_spmbv.cxx  test_types.cxx  test_util.cxx  ut_main.cxx
